# gpu-low-util-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
deploy/: configmap.yaml  daemonset.yaml
docs/: gpu_diagram.html  index.html  robots.txt  sitemap.xml
examples/: sample_dcgm_exporter.prom  sample_heatmap.jsonl  sample_mig_output.jsonl  sample_output.jsonl  sample_prometheus.txt  sample_summary.csv
examples/screenshots/: README.md
gpu_low_util_monitor/: __init__.py  __main__.py  cli.py  collector.py  dcgm_adapter.py  models.py  nvml_adapter.py  power.py  reporting.py  rolling_window.py  util.py
grafana/: dashboard.json
monitoring/: prometheus_alerts.yml
systemd/: gpu-low-util-monitor.service
tests/: test_cli_backend_selection.py  test_collector_resilience.py  test_configurable_windows.py  test_counter_delta_handling.py  test_dcgm_backend.py  test_idle_transition_detection.py  test_mig_support.py  test_monitoring_assets.py  test_packaging_metadata.py  test_power_metrics.py  test_prometheus_optional.py  test_rolling_window.py  test_summary_math.py  test_thermal_metrics.py  test_unsupported_fields.py
