[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-low-util-monitor"
description = "Monitor low-utilization time, idle-state episodes, and workload starvation signals on NVIDIA datacenter GPUs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
  {name = "Manish Lachwani"}
]
keywords = ["nvidia", "nvml", "dcgm", "gpu-monitoring", "gpu-observability", "h100", "h200", "mig"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/manishklach/gpu-low-util-monitor"
Repository = "https://github.com/manishklach/gpu-low-util-monitor"
Issues = "https://github.com/manishklach/gpu-low-util-monitor/issues"
Documentation = "https://github.com/manishklach/gpu-low-util-monitor#readme"
Changelog = "https://github.com/manishklach/gpu-low-util-monitor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
nvml = [
  "nvidia-ml-py>=12.560.30",
]
dev = [
  "pytest>=8.2.0",
]
prometheus = [
  "prometheus-client>=0.20.0",
]
release = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
gpu-low-util-monitor = "gpu_low_util_monitor.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_low_util_monitor*"]

[tool.setuptools.dynamic]
version = {attr = "gpu_low_util_monitor.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
